--- a/angular.json
+++ b/angular.json
@@ -202,7 +202,8 @@
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/font-awesome/scss/font-awesome.scss",
-              "projects/eshop-test1/src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "projects/eshop-test1/src/styles.scss"
             ],
             "scripts": []
           },
