--- a/angular.json
+++ b/angular.json
@@ -529,7 +529,10 @@
               "projects/repair-it/src/assets"
             ],
             "styles": [
-              "projects/repair-it/src/styles.css"
+              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/font-awesome/scss/font-awesome.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "projects/repair-it/src/styles.scss"
             ],
             "scripts": []
           },
@@ -621,6 +624,125 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "projects/repair-it-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "capital-chowringhee": {
+      "root": "projects/capital-chowringhee/",
+      "sourceRoot": "projects/capital-chowringhee/src",
+      "projectType": "application",
+      "prefix": "app",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/capital-chowringhee",
+            "index": "projects/capital-chowringhee/src/index.html",
+            "main": "projects/capital-chowringhee/src/main.ts",
+            "polyfills": "projects/capital-chowringhee/src/polyfills.ts",
+            "tsConfig": "projects/capital-chowringhee/tsconfig.app.json",
+            "assets": [
+              "projects/capital-chowringhee/src/favicon.ico",
+              "projects/capital-chowringhee/src/assets"
+            ],
+            "styles": [
+              "projects/capital-chowringhee/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/capital-chowringhee/src/environments/environment.ts",
+                  "with": "projects/capital-chowringhee/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "capital-chowringhee:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "capital-chowringhee:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "capital-chowringhee:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/capital-chowringhee/src/test.ts",
+            "polyfills": "projects/capital-chowringhee/src/polyfills.ts",
+            "tsConfig": "projects/capital-chowringhee/tsconfig.spec.json",
+            "karmaConfig": "projects/capital-chowringhee/karma.conf.js",
+            "styles": [
+              "projects/capital-chowringhee/src/styles.css"
+            ],
+            "scripts": [],
+            "assets": [
+              "projects/capital-chowringhee/src/favicon.ico",
+              "projects/capital-chowringhee/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/capital-chowringhee/tsconfig.app.json",
+              "projects/capital-chowringhee/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "capital-chowringhee-e2e": {
+      "root": "projects/capital-chowringhee-e2e/",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/capital-chowringhee-e2e/protractor.conf.js",
+            "devServerTarget": "capital-chowringhee:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "capital-chowringhee:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "projects/capital-chowringhee-e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
