--- a/package.json
+++ b/package.json
@@ -11,42 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/cdk": "^6.2.0",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/material": "^6.2.0",
-    "@angular/material-moment-adapter": "^6.2.0",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^6.1.8",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/core": "^6.1.8",
+    "@angular/forms": "^6.1.8",
+    "@angular/http": "^6.1.8",
+    "@angular/material": "^6.4.7",
+    "@angular/material-moment-adapter": "^6.4.7",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/router": "^6.1.8",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.22.1",
+    "moment": "^2.22.2",
     "mustache": "^2.3.0",
-    "ng2-rating": "0.0.7",
     "ngx-stripe": "^0.8.2",
     "primeng": "^6.0.0-alpha.2",
-    "rxjs": "^6.2.0",
+    "rxjs": "^6.3.2",
     "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.6",
-    "typescript": "~2.7.2",
     "@angular-devkit/build-ng-packagr": "~0.6.6",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "@angular/cli": "~6.0.7",
-    "@angular/language-service": "^6.0.3",
+    "@angular/cli": "^6.2.3",
+    "@angular/compiler-cli": "^6.1.8",
+    "@angular/language-service": "^6.1.8",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -58,8 +53,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.0-rc.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": "^0.33.0",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "^2.9.2"
   }
 }
