--- a/angular.json
+++ b/angular.json
@@ -201,7 +201,6 @@
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/font-awesome/scss/font-awesome.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/eshop-test1/src/styles.scss"
             ],
             "scripts": []
@@ -776,7 +775,9 @@
               "projects/login/src/assets"
             ],
             "styles": [
-              "projects/login/src/styles.scss"
+              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/font-awesome/scss/font-awesome.scss",
+              "projects/eshop-test1/src/styles.scss"
             ],
             "scripts": []
           },
