--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^6.1.8",
     "@angular/router": "^6.1.8",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
