--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.22.2",
     "mustache": "^2.3.0",
     "ngx-stripe": "^0.8.2",
+    "node-sass": "^4.12.0",
     "primeng": "^6.0.0-alpha.2",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
